--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "eslint": "^8.29.0",
-    "typescript": "^4.8.4"
+    "interface-datastore": "^8.2.3",
+    "interface-store": "^5.1.2",
+    "typescript": "^4.8.4",
+    "welo": "^2.2.3"
+  },
+  "dependencies": {
+    "@ipld/dag-cbor": "^9.0.3",
+    "datastore-core": "^9.2.0"
   }
 }
