--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
   "scripts": {
     "build": "mkdir -p dist && touch dist/cleanup && rm dist/* && tsc -b",
     "lint": "eslint ./src/* ./test/*",
+    "test": "ts-mocha ./test/*.spec.ts",
     "prepublishOnly": "npm run build"
   },
   "author": "Saul Boyd",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
+    "@helia/interface": "^1.2.1",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
+    "aegir": "^39.0.13",
     "eslint": "^8.29.0",
+    "helia": "^1.3.8",
     "interface-datastore": "^8.2.3",
+    "interface-datastore-tests": "^5.1.2",
     "interface-store": "^5.1.2",
+    "ts-mocha": "^10.0.0",
     "typescript": "^4.8.4",
     "welo": "^2.2.3"
   },
